fixing spacing

--- a/blogs/blocks/preflight/preflight.css
+++ b/blogs/blocks/preflight/preflight.css
@@ -4,7 +4,7 @@
   border: none;
   display: grid;
   grid-template-rows: 75px 1fr 30px;
-  padding-inline: 0;
+  padding: 0;
 
   --color-green: #4BB543;
 }
